making eclipse documents

--- a/web/ja/lastaflute/tutorial/laimpl.html
+++ b/web/ja/lastaflute/tutorial/laimpl.html
@@ -112,7 +112,7 @@
 		もちろん、プロジェクトのカスタマイズ設定があれば調整して構いません。特にこだわりがなければ、これをそのままコピーして貼りつけましょう。
 		<span class="frm">(my.cnf or my.ini の場所にご注意を、よく調べてください)</span>
 	</p>
-<pre><span class="codetitle">e.g. MySQL の my.cnf のオススメ設定 @Java</span><code>
+<pre><span class="codetitle">e.g. MySQL の my.cnf のオススメ設定 @Config</span><code>
 <span class="comment"># /* * * * * * * * * * * * * * * * * * * * * * * * Custom Settings</span>
 <span class="localvar">character_set_server</span>=<span class="literal">utf8mb4</span>
 <span class="localvar">lower_case_table_names</span>=<span class="literal">1</span>
