--- a/web/ja/manual/function/ormapper/conditionbean/howto.html
+++ b/web/ja/manual/function/ormapper/conditionbean/howto.html
@@ -304,7 +304,7 @@ log(<span class="literal">"memberName: {}"</span>, <span class="subpoint">member
 		<dt>メソッドごとの移動</dt><dd><em class="mark">control + alt + 上下矢印</em> <span class="frm">(Macの場合。ちょとWindowsだとわからない...)</span></dd>
 	</dl>
 	<div class="relatedpage"><a href="../../../topic/programming/completion/index.html">プログラミング - コード補完</a></div>
-	<div class="relatedpage"><a href="../../../topic/programming/shortcut/index.html">プログラミング - ショートカット</a></div>
+	<div class="relatedpage"><a href="../../../topic/friends/eclipse/shortcut/index.html">Eclipse - ショートカット</a></div>
 	<p>
 		以下、DBFlute補完テンプレートを入れたときの補完ショートカットの一部です。
 	</p>
