--- a/web/ja/manual/topic/friends/eclipse/plugins/ermaster/index.html
+++ b/web/ja/manual/topic/friends/eclipse/plugins/ermaster/index.html
@@ -5,14 +5,14 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta http-equiv="Content-Style-Type" content="text/css" />
 	<meta name="keywords" content="DBFlute,Eclipse" />
-	<style type="text/css" title="currentStyle">@import "../../../../../../css/sub.css";</style>
+	<style type="text/css" title="currentStyle">@import "../../../../../../../css/sub.css";</style>
 	<title>Friends - ERMaster-b | DBFlute</title>
 </head>
 <body>
 <div id="container" class="ct-manual">
 <div id="mainbar"><div id="header">
 	<a href="#">DBFlute<span>DB変更に強いO/Rマッパー</span></a>
-	<img src="../../../../../../image/logo-content.gif" alt="logo"/>
+	<img src="../../../../../../../image/logo-content.gif" alt="logo"/>
 	<ul>
 		<li class="hd-introduction"><a href="#">Introduction</a></li>
 		<li class="hd-tutorial"><a href="#">Tutorial</a></li>
@@ -26,8 +26,9 @@
 <div id="content"><!-- __content-start__ -->
 	<h1>Friends - ERMaster-b</h1>
 	<p>
-		DBFluteとは直接無関係ながらも、同時に利用するととても便利なライブラリを紹介します。
+		すでに ERMaster-b をフォークした ERFlute を提供しています。そちらの方がメインです。
 	</p>
+	<div class="detailpage"><a href="../../../../function/helper/erflute/index.html">ERFlute</a></div>
 	${indexlist}
 
 	<h2 id="overview">ERMaster-b とは？</h2>
