--- a/web/ja/manual/topic/friends/eclipse/shortcut/index.html
+++ b/web/ja/manual/topic/friends/eclipse/shortcut/index.html
@@ -1,18 +1,18 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+w<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja" >
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta http-equiv="Content-Style-Type" content="text/css" />
 	<meta name="keywords" content="DBFlute,トピック,Topic,コード補完" />
-	<style type="text/css" title="currentStyle">@import "../../../../../css/sub.css";</style>
-	<title>ショートカット | DBFlute</title>
+	<style type="text/css" title="currentStyle">@import "../../../../../../css/sub.css";</style>
+	<title>Eclipseショートカット | DBFlute</title>
 </head>
 <body>
 <div id="container" class="ct-manual">
 <div id="mainbar"><div id="header">
 	<a href="#">DBFlute<span>DB変更に強いO/Rマッパー</span></a>
-	<img src="../../../../../image/logo-content.gif" alt="logo"/>
+	<img src="../../../../../../image/logo-content.gif" alt="logo"/>
 	<ul>
 		<li class="hd-introduction"><a href="#">Introduction</a></li>
 		<li class="hd-tutorial"><a href="#">Tutorial</a></li>
@@ -24,16 +24,16 @@
 </div>
 
 <div id="content"><!-- __content-start__ -->
-	<h1>ショートカット</h1>
+	<h1>Eclipseショートカット</h1>
 	${indexlist}
 
 	<h2 id="linklist">リンクの一覧</h2>
 	<ul>
-		<li><a href="./codejustcut.html">コード調整ショートカット</a></li>
-		<li><a href="./editorcut.html">エディタショートカット</a></li>
-		<li><a href="./operationcut.html">操作系ショートカット</a></li>
-		<li><a href="./searchcut.html">検索ショートカット</a></li>
-		<li><a href="./uttestcut.html">単体テストショートカット</a></li>
+		<li><a href="./codejustcut.html">Eclipse, コード調整ショートカット</a></li>
+		<li><a href="./editorcut.html">Eclipse, エディタショートカット</a></li>
+		<li><a href="./operationcut.html">Eclipse, 操作系ショートカット</a></li>
+		<li><a href="./searchcut.html">Eclipse, 検索ショートカット</a></li>
+		<li><a href="./uttestcut.html">Eclipse, 単体テストショートカット</a></li>
 	</ul>
 <!-- __content-end__ --></div></div>
 
