--- a/web/ja/manual/topic/programming/completion/bigcomp.html
+++ b/web/ja/manual/topic/programming/completion/bigcomp.html
@@ -30,6 +30,9 @@
 	<h2 id="autovariable">変数の抽出</h2>
 	<p>
 		受け取りの型(左辺)を先に書くのではなく、実体(右辺)を先に書いてから受け取りの型を自動で抽出する方法があります。
+	</p>
+	<h3 id="autovariablebyeclipse">Eclipseでの変数の抽出</h3>
+	<p>
 		実体(右辺)のセミコロンの右側にカーソルが置いてある状態で、<em class="keyword">ctrl + 2</em>
 		(Macは command + 2)を押した後(0.x秒)、<em class="keyword">L</em> を押します。
 	</p>
@@ -51,9 +54,9 @@ List&lt;Member&gt; memberList = <span class="attribute">memberBhv</span>.selectL
 
 }
 </code></pre>
+	<h3 id="autovariablebyintellij">IntelliJでの変数の抽出</h3>
 	<p>
-		fore まで打って補完で、foreach の補完が一番上に候補として上がるので、候補を見ずに enter していい。ただ、例えば ForeginKey
-		というクラスがそのプロジェクトに存在するような場合はそちらが優先されるので、矢印キーでちょっと調整する必要がある。
+		.var補完で同じことができます。
 	</p>
 <!-- __content-end__ --></div></div>
 
