--- a/web/ja/tutorial/handson/section01.html
+++ b/web/ja/tutorial/handson/section01.html
@@ -492,7 +492,7 @@ PROJECT_ROOT
 		さらに "Organize imports" にもチェックを入れましょう。これは import
 		文を整理してくれるアクション(ctrl + shift + O)です。
 	</p>
-	<div class="relatedpage"><a href="../../manual/topic/programming/shortcut/codejustcut.html">コード調整ショートカット</a></div>
+	<div class="relatedpage"><a href="../../manual/topic/friends/eclipse/shortcut/codejustcut.html">Eclipse, コード調整ショートカット</a></div>
 
 	<h2 id="dfsetup">DBFluteのセットアップ</h2>
 	<h3 id="dfclient6">DBFluteクライアントの作成 <span class="frm">※Java6, 7</span></h3>
