--- a/web/ja/tutorial/handson/section02.html
+++ b/web/ja/tutorial/handson/section02.html
@@ -180,7 +180,7 @@ PROJECT_ROOT
 		テストを実行する際は、そのテストメソッドの中にカーソルがある状態で ctrl + 0
 		を押すと、そのテストが実行されます。これは Quick JUnit のショートカットです。
 	</p>
-	<div class="relatedpage"><a href="../../manual/topic/programming/shortcut/uttestcut.html">単体テストショートカット</a></div>
+	<div class="relatedpage"><a href="../../manual/topic/friends/eclipse/shortcut/uttestcut.html">Eclipse, 単体テストショートカット</a></div>
 
 	<h2 id="testdata">テストデータの登録</h2>
 	<h3 id="loadtestdata">テストデータを配置して再びReplaceSchema</h3>
