--- a/web/ja/tutorial/handson/section04.html
+++ b/web/ja/tutorial/handson/section04.html
@@ -303,7 +303,7 @@
 		コメントアウトの理由を書くこと自体が大事なことです。
 		ちなみに、コメントアウトは該当行を選択して "ctrl + /"。
 	</p>
-	<div class="relatedpage"><a href="../../manual/topic/programming/shortcut/codejustcut.html#comment">コード調整ショートカット - コメント周り</a></div>
+	<div class="relatedpage"><a href="../../manual/topic/friends/eclipse/shortcut/codejustcut.html#comment">Eclipse, コード調整ショートカット - コメント周り</a></div>
 
 	<h2 id="forcedcls">ネイティヴ型メソッドの削除</h2>
 	<h3 id="java6cls">Java6,7 (DBFlute-1.0.x) では</h3>
