--- a/web/ja/tutorial/handson/section06.html
+++ b/web/ja/tutorial/handson/section06.html
@@ -133,7 +133,7 @@
 		<li>(IntelliJであれば) <em class="bigmark">shift + command + T</em> で対応するテストクラスを自動生成 (src/test/java に)</li>
 		<li>テストメソッドを実装してロジックを検証</li>
 	</ol>
-	<div class="relatedpage"><a href="../../manual/topic/programming/shortcut/uttestcut.html">単体テストショートカット</a></div>
+	<div class="relatedpage"><a href="../../manual/topic/friends/eclipse/shortcut/uttestcut.html">Eclipse, 単体テストショートカット</a></div>
 	<p>
 		ロジッククラスでの Behavior の宣言は、以下のようにします。
 	</p>
