--- a/web/ja/manual/topic/friends/eclipse/coding/formatter.html
+++ b/web/ja/manual/topic/friends/eclipse/coding/formatter.html
@@ -5,14 +5,14 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta http-equiv="Content-Style-Type" content="text/css" />
 	<meta name="keywords" content="DBFlute,Eclipse" />
-	<style type="text/css" title="currentStyle">@import "../../../../../css/sub.css";</style>
-	<title>コードフォーマッター | DBFlute</title>
+	<style type="text/css" title="currentStyle">@import "../../../../../../css/sub.css";</style>
+	<title>Eclipseコードフォーマッター | DBFlute</title>
 </head>
 <body>
 <div id="container" class="ct-manual">
 <div id="mainbar"><div id="header">
 	<a href="#">DBFlute<span>DB変更に強いO/Rマッパー</span></a>
-	<img src="../../../../../image/logo-content.gif" alt="logo"/>
+	<img src="../../../../../../image/logo-content.gif" alt="logo"/>
 	<ul>
 		<li class="hd-introduction"><a href="#">Introduction</a></li>
 		<li class="hd-tutorial"><a href="#">Tutorial</a></li>
@@ -24,12 +24,27 @@
 </div>
 
 <div id="content"><!-- __content-start__ -->
-	<h1>コードフォーマッター</h1>
+	<h1>Eclipseコードフォーマッター</h1>
 	${indexlist}
 
 	<h2 id="about">コードフォーマッターとは？</h2>
 	<p>
 		Eclipseには、ソースコードを自動整形する機能(フォーマッター)が備わっています。
+	</p>
+	<h3 id="formattingwayintro">フォーマットの仕方を少し紹介</h3>
+	<p>
+		Javaエディタ上で "ctrl + shift + F" と押すとフォーマッターを利用できます。
+	</p>
+	<p>
+		ですが、Save Actions の設定がされていれば、保存ボタン (command+S) を押すだけでフォーマットされるようにもできます。
+		<span class="frm">(フォーマットはみなで統一的にやってこそ意義があるので、こちらがオススメ)</span>
+	</p>
+	<h3 id="projectsettings">プロジェクト設定なので共有できる</h3>
+	<p>
+		プロジェクト設定 (Properties: .settingsディレクトリ) に組み込むことができるので、最初の一人が設定すれば他の開発者が設定する必要はなく、共通の設定を簡単に横展開できます。
+	</p>
+	<p>
+		ただ、ワークスペース設定 (Preferences: .metadataディレクトリ) にも設定があり紛らわしいので注意しましょう。
 	</p>
 
 	<h2 id="overview">フォーマッターの概要</h2>
@@ -49,7 +64,7 @@
 	<p>
 		Javaエディタ上で "ctrl + shift + F" と押すとフォーマッターを利用できます。
 	</p>
-	<div class="relatedpage"><a href="../../programming/shortcut/codejustcut.html#look">コード調整ショートカット - 見た目周り</a></div>
+	<div class="relatedpage"><a href="./shortcut/codejustcut.html#look">コード調整ショートカット - 見た目周り</a></div>
 	<p>
 		ただし、Eclipseのデフォルトのフォーマット定義はプロジェクトによっては若干利用しづらいものである可能性があります。
 		具体的には以下の通りです。
@@ -68,13 +83,13 @@
 		[Java Code Style] - [Formatter] において [Enable project specific settings]
 		をチェックし、Editボタンを押すと独自のフォーマット定義を細かく設定できます。
 	</p>
-	<div class="relatedpage"><a href="../../programming/shortcut/operationcut.html#setting">操作ショートカット - 設定周り</a></div>
+	<div class="relatedpage"><a href="./shortcut/operationcut.html#setting">操作ショートカット - 設定周り</a></div>
 	<p>
 		例えば DBFlute では、横幅を 120 文字に、コメント内のフォーマットを OFF にしています。
 	</p>
 	<p>
 		フォーマット定義は、プロジェクト直下の .setting
-		ディレクトリに保存されます。このディレクトリをSVN経由で共有すれば、他のディベロッパーもそのまま同じ設定を利用することができます。
+		ディレクトリに保存されます。このディレクトリをGit経由で共有すれば、他のディベロッパーもそのまま同じ設定を利用することができます。
 	</p>
 
 	<h2 id="import">フォーマット定義のインポート</h2>
@@ -104,15 +119,15 @@
 		ついでではありますが、[Organize imports] にもチェックしておくと(デフォルトでチェックがついている可能性あり)、
 		"インポートの編成" も同様に保存時に自動で実行されるようになります。
 	</p>
-	<div class="relatedpage"><a href="../../programming/shortcut/codejustcut.html#code">コード調整ショートカット - コード調整周り</a></div>
+	<div class="relatedpage"><a href="./shortcut/codejustcut.html#code">コード調整ショートカット - コード調整周り</a></div>
 	<p>
-		この保管時アクションの設定自体も、.settings ディレクトリに保存されるので、SVN経由で共有することができます。
+		この保管時アクションの設定自体も、.settings ディレクトリに保存されるので、Git経由で共有することができます。
 	</p>
 
 	<h2 id="workspace">ワークスペースでも設定できる</h2>
 	<p>
 		Eclipseプロジェクトごとではなく、ワークスペースに対してフォーマット定義を設定することもできます。
-		ただ、その場合はSVN経由での他のディベロッパーへの共有はできないので、複数人プロジェクトではあまり有効ではないと考えられます。
+		ただ、その場合はGit経由での他のディベロッパーへの共有はできないので、複数人プロジェクトではあまり有効ではないと考えられます。
 	</p>
 <!-- __content-end__ --></div></div>
 
