--- a/web/ja/manual/topic/friends/eclipse/shortcut/operationcut.html
+++ b/web/ja/manual/topic/friends/eclipse/shortcut/operationcut.html
@@ -5,14 +5,14 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta http-equiv="Content-Style-Type" content="text/css" />
 	<meta name="keywords" content="DBFlute,トピック,Topic,プログラミング,ショートカット,Eclipse,IDE" />
-	<style type="text/css" title="currentStyle">@import "../../../../../css/sub.css";</style>
-	<title>操作系ショートカット | DBFlute</title>
+	<style type="text/css" title="currentStyle">@import "../../../../../../css/sub.css";</style>
+	<title>Eclipse, 操作系ショートカット | DBFlute</title>
 </head>
 <body>
 <div id="container" class="ct-manual">
 <div id="mainbar"><div id="header">
 	<a href="#">DBFlute<span>DB変更に強いO/Rマッパー</span></a>
-	<img src="../../../../../image/logo-content.gif" alt="logo"/>
+	<img src="../../../../../../image/logo-content.gif" alt="logo"/>
 	<ul>
 		<li class="hd-introduction"><a href="#">Introduction</a></li>
 		<li class="hd-tutorial"><a href="#">Tutorial</a></li>
@@ -24,7 +24,7 @@
 </div>
 
 <div id="content"><!-- __content-start__ -->
-	<h1>操作系ショートカット</h1>
+	<h1>Eclipse, 操作系ショートカット</h1>
 	${indexlist}
 
 	<h2 id="about">操作ショートカットとは？</h2>
@@ -34,15 +34,21 @@
 
 	<h2 id="setting">設定周り</h2>
 	<dl class="textlist">
-		<dt>プロジェクトのプロパティ</dt>
+		<dt>ワークスペースの設定 (Preferences)</dt>
+		<dd>
+			Macなら command + , (カンマ)
+		</dd>
+		<dt>プロジェクトのプロパティ (Properties)</dt>
 		<dd>プロジェクトを選択して <em class="keyword">alt + enter</em></dd>
 		<dd>
-			プロジェクトの選択は、Package Explore
-			上にて選択されたEclipseプロジェクトのプロパティ画面を起動します。
+			Package Explorer上にて選択されたEclipseプロジェクトのプロパティ画面を起動します。
+		</dd>
+		<dd>
 			起動後はそのままフィルタ文字列入力エリアにカーソルがありますので、
 			設定したいプロパティの項目名のキーワードを入れると探しやすいです。
 		</dd>
 	</dl>
+	<div class="relatedpage"><a href="../../friends/eclipse/workproj.html">Eclipseのワークスペースとプロジェクト</a></div>
 
 	<h2 id="file">ファイル操作周り</h2>
 	<dl class="textlist">
